--- a/Bc2Ride/Base.lproj/Main.storyboard
+++ b/Bc2Ride/Base.lproj/Main.storyboard
@@ -23,14 +23,6 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" tag="1" contentMode="scaleToFill" verticalHuggingPriority="249" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CeV-rf-27V">
-                                <rect key="frame" x="218" y="176" width="163" height="98"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <state key="normal" title="Find a Event"/>
-                                <connections>
-                                    <segue destination="PyS-Gx-Ra5" kind="show" id="v0H-Fq-EiH"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L66-8W-rkl">
                                 <rect key="frame" x="203" y="353" width="194" height="48"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
@@ -51,6 +43,14 @@
                                     <!--2037-12-31 11:00:00 +0000-->
                                 </date>
                             </datePicker>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" verticalHuggingPriority="249" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CeV-rf-27V">
+                                <rect key="frame" x="219" y="204" width="163" height="57"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="Find a Event"/>
+                                <connections>
+                                    <segue destination="PyS-Gx-Ra5" kind="show" id="v0H-Fq-EiH"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -157,12 +157,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nNY-3O-zt1">
-                                <rect key="frame" x="20" y="289" width="560" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DPQ-hu-iS2">
                                 <rect key="frame" x="20" y="532" width="560" height="48"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="30"/>
@@ -171,16 +165,31 @@
                                     <segue destination="nTJ-vt-1Nl" kind="show" id="oGg-4E-TTd"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ynH-E8-Aua">
+                                <rect key="frame" x="20" y="49" width="560" height="475"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="d2O-U7-ouC" id="sfT-xa-Tzf"/>
+                                    <outlet property="delegate" destination="d2O-U7-ouC" id="GeH-B7-Dug"/>
+                                </connections>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nNY-3O-zt1">
+                                <rect key="frame" x="20" y="20" width="560" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="lable" destination="nNY-3O-zt1" id="fdg-eY-mlL"/>
+                        <outlet property="studentView" destination="ynH-E8-Aua" id="I8D-oN-fk1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Qn-Rs-lWg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="117" y="-44"/>
+            <point key="canvasLocation" x="141" y="-64"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="czi-XT-0UP">
@@ -201,12 +210,12 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Event Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kQb-Pq-WfQ">
-                                <rect key="frame" x="50" y="64" width="500" height="30"/>
+                                <rect key="frame" x="50" y="219" width="500" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="30" translatesAutoresizingMaskIntoConstraints="NO" id="aFv-ef-cgN">
-                                <rect key="frame" x="50" y="299" width="500" height="216"/>
+                                <rect key="frame" x="50" y="454" width="500" height="61"/>
                                 <date key="date" timeIntervalSinceReferenceDate="495064909.61085403">
                                     <!--2016-09-08 22:01:49 +0000-->
                                 </date>
@@ -215,7 +224,7 @@
                                 </date>
                             </datePicker>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Event Description" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="LhS-AL-NkZ">
-                                <rect key="frame" x="50" y="102" width="500" height="160"/>
+                                <rect key="frame" x="50" y="257" width="500" height="160"/>
                                 <color key="backgroundColor" red="1" green="0.94614128071090631" blue="0.81781778125668236" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="tintColor" red="0.13369230001923094" green="0.38031095158359851" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -239,19 +248,37 @@
                                     <segue destination="BYZ-38-t0r" kind="show" id="CXe-Fw-BtG"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Even Data" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ib-Vz-ogD">
-                                <rect key="frame" x="50" y="270" width="500" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Even Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ib-Vz-ogD">
+                                <rect key="frame" x="50" y="425" width="500" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pak-Ra-eko">
+                                <rect key="frame" x="50" y="64" width="500" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AZD-NC-oyE">
+                                <rect key="frame" x="50" y="102" width="500" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password(optional)" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4dM-zB-B85">
+                                <rect key="frame" x="50" y="140" width="500" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="inputEmail" destination="AZD-NC-oyE" id="1TQ-Oh-zvg"/>
                         <outlet property="inputEventData" destination="aFv-ef-cgN" id="hgm-xZ-Iw9"/>
                         <outlet property="inputEventDescription" destination="LhS-AL-NkZ" id="uBx-3w-KnG"/>
                         <outlet property="inputEventName" destination="kQb-Pq-WfQ" id="dxq-ZR-6ES"/>
+                        <outlet property="inputName" destination="pak-Ra-eko" id="bOX-Jl-2cX"/>
+                        <outlet property="inputPassword" destination="4dM-zB-B85" id="KJv-rq-20X"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tDS-Ke-FN2" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -270,14 +297,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hvP-sK-7dF">
-                                <rect key="frame" x="49" y="74" width="502" height="395"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="nTJ-vt-1Nl" id="EfX-v7-YlS"/>
-                                    <outlet property="delegate" destination="nTJ-vt-1Nl" id="eJh-2w-eo6"/>
-                                </connections>
-                            </tableView>
                             <button opaque="NO" tag="4" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZuT-kL-pwO">
                                 <rect key="frame" x="301" y="533" width="250" height="48"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="30"/>
@@ -316,6 +335,9 @@
                                 <rect key="frame" x="49" y="477" width="250" height="48"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="30"/>
                                 <state key="normal" title="need more ride"/>
+                                <connections>
+                                    <action selector="needMoreRide:" destination="nTJ-vt-1Nl" eventType="touchUpInside" id="Wsh-qG-RQf"/>
+                                </connections>
                             </button>
                             <button opaque="NO" tag="6" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="udw-Zi-buB">
                                 <rect key="frame" x="491" y="20" width="60" height="46"/>
@@ -328,19 +350,26 @@
                                 <rect key="frame" x="49" y="20" width="60" height="46"/>
                                 <state key="normal" title="Button"/>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hvP-sK-7dF">
+                                <rect key="frame" x="49" y="74" width="502" height="395"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="nTJ-vt-1Nl" id="EfX-v7-YlS"/>
+                                    <outlet property="delegate" destination="nTJ-vt-1Nl" id="eJh-2w-eo6"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="carView" destination="hvP-sK-7dF" id="zAk-9b-sEz"/>
                         <outlet property="eventName" destination="r4K-fY-fUZ" id="g6N-iV-qrA"/>
-                        <segue destination="fPm-lg-fFW" kind="show" identifier="showCar" id="Ypf-L1-Pr7"/>
-                        <segue destination="d2O-U7-ouC" kind="show" identifier="showStudents" id="J8u-Jm-Jef"/>
+                        <segue destination="fPm-lg-fFW" kind="show" identifier="showCar" id="M5i-FD-nGe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lex-aC-lS0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1730" y="-32"/>
+            <point key="canvasLocation" x="-1730" y="-44"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="EDO-XA-aHt">
@@ -484,8 +513,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="It1-tY-P4Z"/>
-        <segue reference="CXe-Fw-BtG"/>
+        <segue reference="Aws-qW-CzL"/>
+        <segue reference="Jn8-RS-hEs"/>
         <segue reference="PCH-6k-Rm3"/>
     </inferredMetricsTieBreakers>
 </document>
